# uwb_kalman

./: CMakeLists.txt  README.md  package.xml  uwbindoor.txt
data/: acceleration.yaml  anchor.yaml
data/DataBag/: 2019-01-08-17-40-13.bag  uwb_move_backward.bag  uwb_move_forward.bag  uwb_stop.bag
include/: PositionMeasurementModel.hpp  SystemModel.hpp  param.h  utils.h  uwblocalization.h
include/uwb_kalman/: KalmanFilter.h  KalmanLocalization.h
include/uwb_test/: hostInterfaceCommon.h  hostInterfaceRCM.h  hostInterfaceRN.h  parameters.txt  rcm.h  rcmIf.h  rn.h  rnSampleApp.h
launch/: uwb_kalman.launch
src/: KalmanFilter.cpp  main.cpp  rcm.cpp  rcmIf.cpp  rn.cpp  utils.cpp  uwb_data.cpp  uwblocalization.cpp
src/kf_localization/: KalmanLocalization.cpp  anchor.yaml  left_main.cpp  main.cpp  right_main.cpp
src/uwblocalization/: uwb_data.cpp  uwb_driver.cpp  uwb_driver_a.cpp  uwb_driver_b.cpp  uwblocalization.cpp
